desenv_tests/test-assets/field/failure/nested_wrong_usage_1.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(nested = true)]
    field: String
}

fn main(){}